test-cases/negative/test_141_expect_invalid_expected.lay
# negative test: expect with invalid expected value expression
# expected: parser should reject this

expect 5 is


